apps/pihole/base/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-admin
  namespace: pihole
spec:
  selector:
    app: pihole-admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
