apps/pihole/base/dns-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
    - protocol: TCP
      targetPort: dns
      port: 53
    - protocol: UDP
      targetPort: dns
      port: 53
  type: LoadBalancer
