apps/pihole/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
spec:
  rules:
    - http:
        paths:
          - path: /pihole
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 80
